# life_guard_sentinel

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  lifeguard.db  package-lock.json  pyproject.toml
backend/: requirements.txt
backend/infrastructure/monitoring/: prometheus.yml
backend/infrastructure/redis/: redis.conf
backend/kafka/: config.env
backend/services/alert_service/: main.py
backend/services/api_service/: Dockerfile  main.py
backend/services/enrichment_service/: Dockerfile  main.py
backend/services/processing_service/: Dockerfile  main.py
backend/services/simulator_service/: main.py
backend/shared/: __init__.py
backend/shared/config/: settings.py
backend/shared/kafka/: __init__.py  consumer.py  producer.py  topics.py
backend/shared/models/: __init__.py  enrichment.py  vehicle.py
backend/shared/redis/: client.py
backend/shared/utils/: __init__.py  (+1 more)
client/src/: App.jsx
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.css  index.js
life_guard_sentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/alert_service/: Dockerfile  main.py
services/dashboard_service/: Dockerfile
services/enrichment_service/: Dockerfile  main.py
services/processing_service/: main.py
services/simulator_service/: Dockerfile  main.py
shared/: __init__.py
shared/config/: settings.py
shared/kafka/: consumer.py  producer.py  topics.py
shared/models/: __init__.py  alert.py  enrichment.py  vehicle.py
shared/redis/: __init__.py  client.py
shared/utils/: helpers.py
(+87 files in other folders)
