[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project] 
name = "life-guard-sentinel"
version = "1.0.0"
description = "Real-time IoT Monitoring System"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "redis",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
    "pydantic[email]",
    "pydantic_settings",
    "aiokafka",
    "numpy",
    "joblib",
    "scikit-learn",
    "Faker"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "backend*"]